--- a/module-3/edit-state-human-feedback.ipynb
+++ b/module-3/edit-state-human-feedback.ipynb
@@ -50,13 +50,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, getpass\n",
-    "\n",
-    "def _set_env(var: str):\n",
-    "    if not os.environ.get(var):\n",
-    "        os.environ[var] = getpass.getpass(f\"{var}: \")\n",
-    "\n",
-    "_set_env(\"OPENAI_API_KEY\")"
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv(dotenv_path=\"../module-3/studio/.env\", override=True)"
    ]
   },
   {
